--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.dll-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/recensement
+spring.datasource.username=aoi
+spring.datasource.password=&Khirdo45
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
