--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+debug=true
 spring.jpa.hibernate.dll-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/recensement
-spring.datasource.username=aoi
-spring.datasource.password=&Khirdo45
+spring.datasource.username=root
+spring.datasource.password=
 
 
