--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-debug=true
-spring.jpa.hibernate.dll-auto=create-drop
+
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/recensement
 spring.datasource.username=root
 spring.datasource.password=
-
-
